add the UI for hotkey suggest. WIP: enter car anim

--- a/GameAnimationSample.uproject
+++ b/GameAnimationSample.uproject
@@ -58,6 +58,10 @@
 		{
 			"Name": "ChaosVehiclesPlugin",
 			"Enabled": true
+		},
+		{
+			"Name": "WindowsDualsense_ds5w",
+			"Enabled": true
 		}
 	],
 	"EpicSampleNameHash": "1673045636"
